// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RT-L5-001: snapshot lock — all L5 fixtures > agent-has-tool-call-stop fixture snapshot locked 1`] = `
"import { generateText, tool, hasToolCall } from 'ai';
import { z } from 'zod';
import { anthropic } from '@ai-sdk/anthropic';

export default async function run({ model: __model_provider, sink: __sink } = {}) {
  __sink?.('output', (await generateText({ model: (__model_provider ?? anthropic('claude-haiku-4-5')), prompt: 'What\\'s the weather in Tokyo?', tools: { weather: tool({
    description: 'Get weather for a city',
    inputSchema: z.object({ city: z.string() }),
    execute: async (input) => {
        return '{ temp: 70, conditions: \\'sunny\\' }';
    }
  }) }, toolChoice: 'auto', stopWhen: hasToolCall('weather') })).text);
}
"
`;

exports[`RT-L5-001: snapshot lock — all L5 fixtures > agent-multi-step fixture snapshot locked 1`] = `
"import { generateText, tool, stepCountIs } from 'ai';
import { z } from 'zod';
import { anthropic } from '@ai-sdk/anthropic';

export default async function run({ model: __model_provider, sink: __sink } = {}) {
  __sink?.('output', (await generateText({ model: (__model_provider ?? anthropic('claude-haiku-4-5')), prompt: 'What\\'s the weather in Tokyo?', tools: { weather: tool({
    description: 'Get weather for a city',
    inputSchema: z.object({ city: z.string() }),
    execute: async (input) => {
        return '{ temp: 70, conditions: \\'sunny\\' }';
    }
  }) }, toolChoice: 'auto', stopWhen: stepCountIs(3) })).text);
}
"
`;

exports[`RT-L5-001: snapshot lock — all L5 fixtures > generate-text-basic fixture snapshot locked 1`] = `
"import { generateText } from 'ai';
import { anthropic } from '@ai-sdk/anthropic';

export default async function run({ model: __model_provider, sink: __sink } = {}) {
  __sink?.('output', (await generateText({ model: (__model_provider ?? anthropic('claude-haiku-4-5')), prompt: 'Say hello' })).text);
}
"
`;

exports[`RT-L5-001: snapshot lock — all L5 fixtures > stream-text-basic fixture snapshot locked 1`] = `
"import { streamText } from 'ai';
import { anthropic } from '@ai-sdk/anthropic';

export default async function run({ model: __model_provider, sink: __sink } = {}) {
  for await (const __chunk of (streamText({ model: (__model_provider ?? anthropic('claude-haiku-4-5')), prompt: 'Hello' })).textStream) {
    __sink?.('out', __chunk);
  }
}
"
`;
